--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2",
     "@google/generative-ai": "^0.17.1",
-    "@tanstack/react-query": "^5.51.23"
+    "@gotracksuit/design": "^0.2.5",
+    "@tanstack/react-query": "^5.51.23",
+    "next": "15.3.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "mini-css-extract-plugin": "^2.9.2",
+    "typescript": "^5"
   }
 }
